# Axon_ML

./: .clang-format  .gitignore  LICENSE  PROJECT_STANDARDS.md  PROJECT_STRUCTURE.md  README.md  analysis_hard_samples.py  feature-dictionary.md  generate_table.py
Axon/Release/: axon_engine.exp
C++/docs/: dll_usage.md
C++/examples/: CMakeLists.txt
C++/include/kvd/: api.h
C++/src/: CMakeLists.txt  api.cpp  config.cpp  features.h  features_byte_sequence.cpp  features_pe.cpp  kvd.def  lightgbm_infer.h  malware_scanner.cpp  malware_scanner.h  util_filesystem.cpp
Signature/Release/: signature_engine.exp  signature_engine.lib
features/: extractor_in_memory.py
models/: routing_model.py
resources/weights_cluster_eval/: README.md
scripts/: analysis_hard_samples.py
src/cpp/: CMakeLists.txt
src/cpp/kvd_core/: CMakeLists.txt
src/cpp/kvd_core/examples/: CMakeLists.txt  kvd_dll_selftest.cpp  kvd_scan_loader.cpp  scan_path.cpp
src/cpp/kvd_core/include/kvd/: api.h
src/cpp/kvd_core/src/: CMakeLists.txt  api.cpp  config.cpp  config.h  family_classifier.cpp  family_classifier.h  features.h  features_byte_sequence.cpp  features_file_attributes.cpp  features_file_attributes.h  features_pe.cpp  features_statistics.cpp  features_statistics.h  kvd.def  kvd_internal.h  lightgbm_infer.cpp  lightgbm_infer.h  malware_scanner.cpp  malware_scanner.h  onnx_infer.cpp  onnx_infer.h  sha256.cpp  sha256.h  util_filesystem.cpp  util_filesystem.h
src/cpp/kvd_core/tests/: CMakeLists.txt  test_smoke.cpp
src/python/: axon_ml.spec  pyproject.toml  requirements.txt
src/python/kvd_detector/: __init__.py  calibration.py  cli.py  dataset_v2.py  ensemble.py  feature_enhancer.py  feature_extractor_enhanced.py  finetune.py  gating_v2.py  hard_negative.py  main.py  onnx_backend.py  pipeline.py  pretrain.py  scanner.py  scanner_service.py  scanner_v2.py  settings.py  threshold.py
src/python/kvd_detector/config/: config.py
src/python/kvd_detector/features/: extractor_in_memory.py  extractor_save.py  statistics.py
src/python/kvd_detector/models/: family_classifier.py  gating.py  routing_model.py
src/python/kvd_detector/tools/: hardcase_model_trials.py
src/python/kvd_detector/training/: automl.py  data_loader.py  evaluate.py  export_family_classifier_json.py  feature_io.py  hardcase_dl.py  hardcase_model_trials.py  incremental.py  model_io.py  train_lightgbm.py  train_routing.py
src/python/kvd_detector/utils/: logging_utils.py  path_utils.py
validation/: gating_validator.py
