[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kvd_detector"
version = "0.1.0"
description = "Kolo Virus Detector Machine Learning Version 2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "lightgbm",
    "hdbscan",
    "joblib",
    "matplotlib",
    "pandas",
    "nlohmann-json",
    "lief"
]

[project.scripts]
kvd-scan = "kvd_detector.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kvd_detector*"]
