[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kvd_detector"
version = "0.1.0"
description = "Kolo Virus Detector Machine Learning Version 2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "fast-hdbscan>=0.1.3",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pefile>=2023.2.7",
    "seaborn>=0.12.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "optuna>=3.2.0",
    "hyperopt>=0.2.7",
    "onnx>=1.14.0",
    "onnxscript>=0.1.0",
    "onnxruntime>=1.15.0",
    "onnxmltools>=1.11.0",
    "skl2onnx>=1.15.0",
    "lief>=0.13.0"
]

[project.scripts]
kvd-scan = "kvd_detector.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kvd_detector*"]
